# kbo-occultation

./: .gitignore  README.md  pyproject.toml
examples/: basic_simulation.py  plot_example.py
kbo_occultation/: __init__.py  config.py  instruments.py  io.py  photometry.py  physics.py  simulation.py
kbo_occultation/data/: optical_filter_MAGIC_QE.txt  optical_filter_MAGIC_SII.txt
tests/: test_impact_2D.py  test_physics.py
