[project]
name = "kbo-occultation"
version = "0.1.0"
description = "Simulation of KBO stellar occultation diffraction patterns"
authors = [{name="eliadse"}]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
